Fix theme on safari

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -384,7 +384,6 @@ main {
 }
 
 section {
-	flex-basis: 0;
 	flex-grow: 999;
 	display: flex;
 	flex-direction: column;
